# jaqpot-mcp-server

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  server.py
.github/workflows/: docker-publish.yml
examples/: usage_example.py
src/jaqpot_mcp_server/: __init__.py  __main__.py  server.py
